introduction 2nd draft

--- a/ia.tex
+++ b/ia.tex
@@ -6,17 +6,42 @@
 \usepackage[indent=0.5in]{parskip}  % remember to add comment about why this needed
 \usepackage{hyperref}
 \usepackage{indentfirst}
+\usepackage{soul}
 
 \addbibresource{references.bib}
-\setlength{\bibitemsep}{13.8pt}
+\setlength{\bibitemsep}{12pt}
 \setlength{\parskip}{12pt}
-\renewcommand{\baselinestretch}{1.15}
-% \setlength\parskip\baselineskip
+\renewcommand{\baselinestretch}{1.15}  % 1.15 spacing
+
+\title{\textbf{The Relationship between Glucose Concentration and the Rate of Carbon Dioxide Production during the Fermentation Process of Yeast}}
+\author{}
+\date{}
 
 % https://chem-space.com/search
 \begin{document}
 
+\maketitle
+\newpage
+
 \section{Introduction}
+I have always enjoyed cooking as a mostly self-taught hobby. Having experimented with multiple aspects of cooking throughout my life eventually lead me to explore baking, where I was fascinated by timelapse footages of bread rising in the oven. As such, I was inspired to my own bread, following basic recipes online with a surface-level understanding of the chemistry involving the release of carbon dioxide from yeast fermentation. However, the realm of baking is very large and not limited to bread only, as there exists many types of doughs for pizza, puff pastry, cookies, etc. One notable difference between these different types of dough is the amount of sugar used, which led me to form my research question: \textbf{``The Relationship between Glucose Concentration and the Rate of Carbon Dioxide Production during the Fermentation Process of Yeast''}.
+
+\section{Background}
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque eros eget egestas mollis. Duis non mauris imperdiet, tristique ipsum vel, vestibulum mi. Nunc eget urna arcu. Morbi neque leo, accumsan at euismod ac, tempor eget purus. Curabitur a varius velit. Curabitur non imperdiet ipsum. Fusce porta odio eu nibh mattis molestie. Maecenas ut dictum mauris, consequat euismod lacus.
+
+\subsection{What Is Yeast}
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque eros eget egestas mollis. Duis non mauris imperdiet, tristique ipsum vel, vestibulum mi. Nunc eget urna arcu. Morbi neque leo, accumsan at euismod ac, tempor eget purus. Curabitur a varius velit. Curabitur non imperdiet ipsum. Fusce porta odio eu nibh mattis molestie. Maecenas ut dictum mauris, consequat euismod lacus.
+
+\subsection{Aerobic and Anaerobic Respiration in Yeast}
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque eros eget egestas mollis. Duis non mauris imperdiet, tristique ipsum vel, vestibulum mi. Nunc eget urna arcu. Morbi neque leo, accumsan at euismod ac, tempor eget purus. Curabitur a varius velit. Curabitur non imperdiet ipsum. Fusce porta odio eu nibh mattis molestie. Maecenas ut dictum mauris, consequat euismod lacus.
+
+\section{Kinetics}
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque eros eget egestas mollis. Duis non mauris imperdiet, tristique ipsum vel, vestibulum mi. Nunc eget urna arcu. Morbi neque leo, accumsan at euismod ac, tempor eget purus. Curabitur a varius velit. Curabitur non imperdiet ipsum. Fusce porta odio eu nibh mattis molestie. Maecenas ut dictum mauris, consequat euismod lacus.
+
+\subsection{Basic Kinetics}
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque eros eget egestas mollis. Duis non mauris imperdiet, tristique ipsum vel, vestibulum mi. Nunc eget urna arcu. Morbi neque leo, accumsan at euismod ac, tempor eget purus. Curabitur a varius velit. Curabitur non imperdiet ipsum. Fusce porta odio eu nibh mattis molestie. Maecenas ut dictum mauris, consequat euismod lacus.
+
+\subsection{Michaelis Menten Enzyme Kinetics}
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque eros eget egestas mollis. Duis non mauris imperdiet, tristique ipsum vel, vestibulum mi. Nunc eget urna arcu. Morbi neque leo, accumsan at euismod ac, tempor eget purus. Curabitur a varius velit. Curabitur non imperdiet ipsum. Fusce porta odio eu nibh mattis molestie. Maecenas ut dictum mauris, consequat euismod lacus.
 
 \nocite{*}
