--- a/references.bib
+++ b/references.bib
@@ -22,9 +22,9 @@
     address   = {Cary, NC}
 }
 
-@misc{Tho98w,
-    author = {Len Thomas},
-    title  = {Statistical power analysis software},
-    url    = {http://www.forestry.ubc.ca/conservation/power/},
-    year   = 1998
+@misc{ref,
+    author = {Author},
+    title  = {Title},
+    url    = {https://www.google.com/},
+    year   = 1987
 }
