about to create the nasty equations

--- a/ia.tex
+++ b/ia.tex
@@ -11,6 +11,7 @@
 
 \addbibresource{references.bib}
 \setlength{\bibitemsep}{12pt}
+\setlength{\parindent}{0.5in}
 % \setlength{\parskip}{12pt}
 \renewcommand{\baselinestretch}{1.15}  % 1.15 spacing
 
@@ -43,7 +44,7 @@ It is well known that yeast reacts with glucose to produce ethanol and carbon di
 
 \medskip
 
-Firstly, aerobic respiration is much more efficient and optimal than anaerobic respiration because of the significantly more ATP (adenosine triphosphate, energy carrying molecule) produced. In the presence of oxygen, yeast reacts with glucose to produce carbon dioxide and water:
+Firstly, aerobic respiration is much more efficient and optimal than anaerobic respiration because of the significantly more ATP (adenosine triphosphate, energy carrying molecule) produced. In the presence of oxygen, yeast reacts with glucose to produce carbon dioxide and water \parencite{ref}:
 \begin{equation}
     \ce{C6H12O6 + 6O2 ->[cellular respiration] 6CO2 + 6H2O}
 \end{equation}
@@ -56,7 +57,11 @@ Going into the details of aerobic respiration its three steps:
 
 \medskip
 
-However, the focus of this internal assessment is on anaerobic respiration of yeast because the amount of oxygen was limited given the environment that the experiment was carried out in.
+However, the focus of this internal assessment is on anaerobic respiration of yeast because the amount of oxygen was limited given the environment that the experiment was carried out in. The only similarity between aerobic and anaerobic respiration is glycolysis, which prompts to explore this step in more detail.
+
+\medskip
+
+bruh
 
 \section{Kinetics}
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque eros eget egestas mollis. Duis non mauris imperdiet, tristique ipsum vel, vestibulum mi. Nunc eget urna arcu. Morbi neque leo, accumsan at euismod ac, tempor eget purus. Curabitur a varius velit. Curabitur non imperdiet ipsum. Fusce porta odio eu nibh mattis molestie. Maecenas ut dictum mauris, consequat euismod lacus.
