--- a/ia.tex
+++ b/ia.tex
@@ -11,7 +11,7 @@
 
 \addbibresource{references.bib}
 \setlength{\bibitemsep}{12pt}
-\setlength{\parindent}{0.5in}
+\setlength{\parindent}{0in}
 % \setlength{\parskip}{12pt}
 \renewcommand{\baselinestretch}{1.15}  % 1.15 spacing
 
@@ -33,7 +33,7 @@ I have always enjoyed cooking as a mostly self-taught hobby. Having experimented
 \section{Background}
 
 \subsection{What Is Yeast}
-Yeast are single celled, eukaryotic organisms of the fungus kingdom. Like many living organisms, yeast requires food to survive, namely be converting carbohydrates or sugar sources to energy through either aerobic or anaerobic respiration \parencite{ref}. There exists many types of yeast. The one used in this internal assessment are part of the \emph{Saccharomyces cerevisiae} strain, which can be categorized into brewer's yeast (beer making) and baker's yeast (leavening agent). \parencite{ref}
+Yeast are single celled, eukaryotic organisms of the fungus kingdom. Like many living organisms, yeast requires food to survive, namely be converting carbohydrates or sugar sources to energy through either aerobic or anaerobic respiration \parencite{ref}. There exists many types of yeast. The one used in this internal assessment are part of the \emph{Saccharomyces cerevisiae} strain, which can be categorized into brewer's yeast (beer making) and baker's yeast (leavening agent) \parencite{ref}.
 
 \medskip
 
@@ -57,11 +57,16 @@ Going into the details of aerobic respiration its three steps:
 
 \medskip
 
-However, the focus of this internal assessment is on anaerobic respiration of yeast because the amount of oxygen was limited given the environment that the experiment was carried out in. The only similarity between aerobic and anaerobic respiration is glycolysis, which prompts to explore this step in more detail.
+However, the focus of this internal assessment is on anaerobic respiration of yeast because the amount of oxygen was limited given the environment that the experiment was carried out in. The only similarity between aerobic and anaerobic respiration is glycolysis, which prompts to explore this step in more detail \parencite{ref}.
 
 \medskip
 
-bruh
+The first step of glycolysis converts glucose into fructose 1,6-biphosphate, outlined in the figure below:
+
+[fig- Conversion of glucose to fructose 1,6-biphosphate. Intermediate steps are ommited. Image created by moi]
+
+Glucose goes through a series of reactions catalyzed by multiple enzymes, which consumes 2 ATP in the process. ATP turns to ADP (adenosine diphosphate) when a phosphate group gets transferred from the ATP to the sugars that glucose gets broken down into, eventually leading to the formation of fructose 1,6-biphosphate.
+
 
 \section{Kinetics}
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque eros eget egestas mollis. Duis non mauris imperdiet, tristique ipsum vel, vestibulum mi. Nunc eget urna arcu. Morbi neque leo, accumsan at euismod ac, tempor eget purus. Curabitur a varius velit. Curabitur non imperdiet ipsum. Fusce porta odio eu nibh mattis molestie. Maecenas ut dictum mauris, consequat euismod lacus.
