glycolysis writeup done?

--- a/ia.tex
+++ b/ia.tex
@@ -55,18 +55,59 @@ Going into the details of aerobic respiration its three steps:
     \item Oxidative phosphorylation (where most of the APT is produced)
 \end{enumerate}
 
+% TODO italicize key terms?
+
 \medskip
 
 However, the focus of this internal assessment is on anaerobic respiration of yeast because the amount of oxygen was limited given the environment that the experiment was carried out in. The only similarity between aerobic and anaerobic respiration is glycolysis, which prompts to explore this step in more detail \parencite{ref}.
 
 \medskip
 
-The first step of glycolysis converts glucose into fructose 1,6-biphosphate, outlined in the figure below:
+The first step of glycolysis converts glucose into fructose 1,6-biphosphate (F-1,6-BP), outlined in the figure below:
 
-[fig- Conversion of glucose to fructose 1,6-biphosphate. Intermediate steps are ommited. Image created by moi]
+\medskip
 
-Glucose goes through a series of reactions catalyzed by multiple enzymes, which consumes 2 ATP in the process. ATP turns to ADP (adenosine diphosphate) when a phosphate group gets transferred from the ATP to the sugars that glucose gets broken down into, eventually leading to the formation of fructose 1,6-biphosphate.
+[fig- Conversion of glucose to F-1,6-BP. Intermediate steps are ommited. Image created by moi]
 
+\medskip
+
+Glucose goes through a series of reactions catalyzed by multiple enzymes, which consumes 2 ATP in the process. ATP turns to ADP (adenosine diphosphate) when a phosphate group gets transferred from the ATP to the sugars that glucose gets broken down into, eventually leading to the formation of F-1,6-BP.
+
+\medskip
+
+The second step of glycolysis involves splitting F-1,6-BP into two three-carbon fragments, glyceraldehyde 3-phosphate (GAP) and dihydroxyacetone phosphate (DHAP), outlined in the figure below:
+
+\medskip
+
+[fig]
+
+\medskip
+
+When catalyzed with an enzyme, F-1,6-BP splits into the three-carbon fragments but only GAP can continue the glycolysis process. However, GAP and DHAP exist in equilibrium, meaning all the DHAP eventually turns to GAP.
+
+\medskip
+
+The third and final step of glycolysis converts the DHAP to pyruvate, another three-carbon molecule while producing ATP, outlined in the figure below:
+
+\medskip
+
+[fig]
+
+\medskip
+
+Like glucose, GAP goes through another series of reactions catalyzed by multiple enzymes that eventually turn it into Pyruvate. During one step of the process, a molecule called NAD+ (nicotinamide adenine dinucleotide, a coenzyme found in the cell that is crucial to metabolic processes) \parencite{ref} gets reduced to NADH wihle GAP is simultaneously oxidized. The phosphate groups that were given from the ATP in the first step is combined with ADP twice to form 2 ATP. Since the DHAP got converted into GAP in the previous step, 4 total ATP is formed \parencite{ref}.
+
+\medskip
+
+The net equation for the formation of pyruvate is thus given by:
+
+\medskip
+
+[fig]
+
+\medskip
+
+EZPZ
 
 \section{Kinetics}
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque eros eget egestas mollis. Duis non mauris imperdiet, tristique ipsum vel, vestibulum mi. Nunc eget urna arcu. Morbi neque leo, accumsan at euismod ac, tempor eget purus. Curabitur a varius velit. Curabitur non imperdiet ipsum. Fusce porta odio eu nibh mattis molestie. Maecenas ut dictum mauris, consequat euismod lacus.
