--- a/ia.tex
+++ b/ia.tex
@@ -37,16 +37,16 @@ Yeast are single celled, eukaryotic organisms of the fungus kingdom. Like many l
 
 \medskip
 
-This internal assessment focuses on the use of active dry yeast, which consists of pellets of live yeast cells coated with a layer of dehydrated cells, \parencite{ref} allowing it to stay dormant to give it a longer shelf life. Hance, active dry yeast must be activated through rehydration in lukewarm water from 37$\,^{\circ}$C to 43$\,^{\circ}$C (optimal fermentation conditions) for 5 to 10 minutes in a process called proofing which also ensures that the yeast is dissolved in the water \parencite{ref}.
+This internal assessment focuses on the use of active dry yeast, which consists of pellets of live yeast cells coated with a layer of dehydrated cells, \parencite{ref} allowing it to stay dormant to give it a longer shelf life. Hence, active dry yeast must be activated through rehydration in lukewarm water from 37$\,^{\circ}$C to 43$\,^{\circ}$C (optimal fermentation conditions) for 5 to 10 minutes in a process called proofing which also ensures that the yeast is dissolved in the water \parencite{ref}.
 
 \subsection{Aerobic and Anaerobic Respiration in Yeast}
 It is well known that yeast reacts with glucose to produce ethanol and carbon dioxide. To understand the details of how this works, it is crucial to understand how yeast undergoes both aerobic and anaerobic respiration.
 
 \medskip
 
-Firstly, aerobic respiration is much more efficient and optimal than anaerobic respiration because of the significantly more ATP (adenosine triphosphate, energy carrying molecule) produced. In the presence of oxygen, yeast reacts with glucose to produce carbon dioxide and water \parencite{ref}:
+Aerobic respiration is much more efficient and optimal than anaerobic respiration because of the significantly more ATP (adenosine triphosphate, energy carrying molecule) produced. The chemical formula for aerobic respiration is given below:
 \begin{equation}
-    \ce{C6H12O6 + 6O2 ->[cellular respiration] 6CO2 + 6H2O}
+    \ce{C6H12O6 + 6O2 ->[cellular respiration] 6CO2 + 6H2O + ATP}
 \end{equation}
 Going into the details of aerobic respiration its three steps:
 \begin{enumerate}[topsep=0pt, noitemsep]
@@ -95,7 +95,7 @@ The third and final step of glycolysis converts the DHAP to pyruvate, another th
 
 \medskip
 
-Like glucose, GAP goes through another series of reactions catalyzed by multiple enzymes that eventually turn it into Pyruvate. During one step of the process, a molecule called NAD+ (nicotinamide adenine dinucleotide, a coenzyme found in the cell that is crucial to metabolic processes) \parencite{ref} gets reduced to NADH wihle GAP is simultaneously oxidized. The phosphate groups that were given from the ATP in the first step is combined with ADP twice to form 2 ATP. Since the DHAP got converted into GAP in the previous step, 4 total ATP is formed \parencite{ref}.
+Like glucose, GAP goes through another series of reactions catalyzed by multiple enzymes that eventually turn it into Pyruvate. During one step of the process, a molecule called \ce{NAD+} (nicotinamide adenine dinucleotide, a coenzyme found in the cell that is crucial to metabolic processes) \parencite{ref} gets reduced to NADH wihle GAP is simultaneously oxidized. The phosphate groups that were given from the ATP in the first step is combined with ADP twice to form 2 ATP. Since the DHAP got converted into GAP in the previous step, 4 total ATP is formed \parencite{ref}.
 
 \medskip
 
@@ -103,11 +103,15 @@ The net equation for the formation of pyruvate is thus given by:
 
 \medskip
 
-[fig]
+\begin{equation}
+    \ce{Glucose + 2 + 2ADP + 2NAD+ -> 2Pyruvate + 2ATP + 2 NADH + 2H+ + 2H2O}
+\end{equation}
 
 \medskip
 
-EZPZ
+According to Equation (2), the end result of glycolysis leaves 2 pyruvate, 2 NADH, 2 ATP, 2 \ce{H2O}, and 2 \ce{H+}. If there is unreacted glucose, glycolysis will continue. However, a cell's supply of \ce{NAD+} is limited, so it must be regenerated. In aerobic respiration, the pyruvate goes through the tricarboxylic acid cycle to produce even more NADH that eventually gets oxidized to \ce{NAD+} during oxidative phosphorylation, which produces most of the ATP associated with aerobic respiration as a bonus. In anaerobic respiration, fermentation provides an alternate pathway to turn the NADH back to \ce{NAD+}.
+
+
 
 \section{Kinetics}
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque eros eget egestas mollis. Duis non mauris imperdiet, tristique ipsum vel, vestibulum mi. Nunc eget urna arcu. Morbi neque leo, accumsan at euismod ac, tempor eget purus. Curabitur a varius velit. Curabitur non imperdiet ipsum. Fusce porta odio eu nibh mattis molestie. Maecenas ut dictum mauris, consequat euismod lacus.
