--- a/ia.tex
+++ b/ia.tex
@@ -49,7 +49,7 @@ Aerobic respiration is much more efficient and optimal than anaerobic respiratio
     \ce{C6H12O6 + 6O2 ->[cellular respiration] 6CO2 + 6H2O + ATP}
 \end{equation}
 Going into the details of aerobic respiration its three steps:
-\begin{enumerate}[topsep=0pt, noitemsep]
+\begin{enumerate}[topsep=\parskip, noitemsep]
     \item Glycolysis
     \item Tricarboxylic acid cycle
     \item Oxidative phosphorylation (where most of the APT is produced)
@@ -111,7 +111,11 @@ The net equation for the formation of pyruvate is thus given by:
 
 According to Equation (2), the end result of glycolysis leaves 2 pyruvate, 2 NADH, 2 ATP, 2 \ce{H2O}, and 2 \ce{H+}. If there is unreacted glucose, glycolysis will continue. However, a cell's supply of \ce{NAD+} is limited, so it must be regenerated. In aerobic respiration, the pyruvate goes through the tricarboxylic acid cycle to produce even more NADH that eventually gets oxidized to \ce{NAD+} during oxidative phosphorylation, which produces most of the ATP associated with aerobic respiration as a bonus. In anaerobic respiration, fermentation provides an alternate pathway to turn the NADH back to \ce{NAD+}.
 
+\medskip
 
+For yeast, alcoholic fermentation converts pyruvate into ethanol and carbon dioxide, both of with are byproducts.
+
+\medskip
 
 \section{Kinetics}
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque eros eget egestas mollis. Duis non mauris imperdiet, tristique ipsum vel, vestibulum mi. Nunc eget urna arcu. Morbi neque leo, accumsan at euismod ac, tempor eget purus. Curabitur a varius velit. Curabitur non imperdiet ipsum. Fusce porta odio eu nibh mattis molestie. Maecenas ut dictum mauris, consequat euismod lacus.
