--- a/ia.tex
+++ b/ia.tex
@@ -111,6 +111,7 @@ According to Equation (2), the end result of glycolysis leaves 2 pyruvate, 2 NAD
 
 % TODO figure out when to use name and chemical
 % TODO chemical capitals
+% TODO add more references
 For yeast, alcoholic fermentation converts pyruvate into ethanol and carbon dioxide, both of with are waste products. It consists of two steps that are also catalyzed by enzymes. The first step in this conversion process involves the decarboxylation of pyruvate to acetaldehyde, producing carbon dioxide as a by product, as shown below:
 \begin{equation}
     \ce{\underset{\text{pyruvate}}{\ce{CH3COCOO-}} + H+ -> \underset{\text{acetaldehyde}}{\ce{CH3CHO}} + CO2}
@@ -136,7 +137,29 @@ Which is more familiarly known as:
     \ce{C6H12O6 -> 2C2H5OH + 2CO2}
 \end{equation}
 
-\section{Kinetics}
+\section{Kinetics}  % TODO fermentation process changen to alcoholic fermentation
+Given the following chemical reaction denoting alcoholic fermentation:
+\begin{equation}
+    \ce{A -> 2B + 2C}
+\end{equation}
+Studying the kinetics of this reaction is useful for performing further levels of analysis. Kinetics in chemistry refers to the study of rates of chemical reactions, which is a measurement of the change in concentration of products and reactants over a period of time \parencite{ref}.
+
+\medskip
+
+The rate of reaction, also known as the reaction velocity $V$ with respect to a compound within the chemical equation is represented as the change in concentration of that compound over the change in time multiplied by the inverse of its stoichiometric coefficient:
+\begin{equation}
+    V = -\frac{d[A]}{dt} = \frac{1}{2}\frac{d[B]}{dt} = \frac{1}{2}\frac{d[C]}{dt}
+\end{equation}
+
+Additionally, the rate law states how the reaction velocity will be proportional to the product of reactants, each reactant raised to a power:
+\begin{equation}
+    V = \text{rate} = k[A]^m
+\end{equation}
+where k is is the proportionality constant \parencite{ref} and the sum of the powers denote the order of the reaction. In the case of alcoholic fermentation, the order is purely dependent on $m$.
+
+\medskip
+
+If the order of the reaction is 0, or $m=0$, the rate of reaction will not be dependent on the concentration of the reactants. That is $V = k[A]^0 = k$. If the order of the reaction is 1, the rate of reaction will be proportional to the concentration of the. That is $V = k[A]^1 = k[A]$.
 
 \subsection{Basic Kinetics}
 
