--- a/ia.tex
+++ b/ia.tex
@@ -73,7 +73,7 @@ The first step of glycolysis converts glucose into fructose 1,6-biphosphate (F-1
 
 \medskip
 
-Glucose goes through a series of reactions catalyzed by multiple enzymes, which consumes 2 ATP in the process. ATP turns to ADP (adenosine diphosphate) when a phosphate group (\ce{HPO4^{2-}}) gets transferred from the ATP to the sugars that glucose gets broken down into, eventually leading to the formation of F-1,6-BP.
+Glucose goes through a series of reactions catalyzed by multiple enzymes, which consumes 2 ATP in the process. ATP turns to ADP (adenosine diphosphate) when a phosphate group (\ce{HPO_{4}^{2-}}) gets transferred from the ATP to the sugars that glucose gets broken down into, eventually leading to the formation of F-1,6-BP.
 
 \medskip
 
@@ -103,7 +103,7 @@ Like glucose, GAP goes through another series of reactions catalyzed by multiple
 
 The net equation for the formation of pyruvate is thus given by:
 \begin{multline}
-    \ce{glucose + 2HPO4^{2-} + 2ADP + 2NAD+ \\-> 2pyruvate + 2ATP + 2 NADH + 2H+ + 2H2O}
+    \ce{glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ \\-> 2pyruvate + 2ATP + 2 NADH + 2H+ + 2H2O}
 \end{multline} % TODO \ce{2pyruvate} issue
 According to Equation (2), the end result of glycolysis leaves 2 pyruvate, 2 NADH, 2 ATP, 2 \ce{H2O}, and 2 \ce{H+}. If there is unreacted glucose, glycolysis will continue. However, a cell's supply of \ce{NAD+} is limited, so it must be regenerated. In aerobic respiration, the pyruvate goes through the tricarboxylic acid cycle to produce even more NADH that eventually gets oxidized to \ce{NAD+} during oxidative phosphorylation, which produces most of the ATP associated with aerobic respiration as a bonus. In anaerobic respiration, fermentation provides an alternate pathway to turn the NADH back to \ce{NAD+}.
 
@@ -112,7 +112,7 @@ According to Equation (2), the end result of glycolysis leaves 2 pyruvate, 2 NAD
 % TODO figure out when to use name and chemical
 % TODO chemical capitals
 % TODO add more references
-For yeast, alcoholic fermentation converts pyruvate into ethanol and carbon dioxide, both of with are waste products. It consists of two steps that are also catalyzed by enzymes. The first step in this conversion process involves the decarboxylation of pyruvate to acetaldehyde, producing carbon dioxide as a by product, as shown below:
+For yeast,  alcoholic fermentation converts pyruvate into ethanol and carbon dioxide, both of with are waste products. It consists of two steps that are also catalyzed by enzymes. The first step in this conversion process involves the decarboxylation of pyruvate to acetaldehyde, producing carbon dioxide as a by product, as shown below:
 \begin{equation}
     \ce{\underset{\text{pyruvate}}{\ce{CH3COCOO-}} + H+ -> \underset{\text{acetaldehyde}}{\ce{CH3CHO}} + CO2}
 \end{equation}
@@ -122,22 +122,24 @@ In the second step, acetaldehyde gets reduced to ethanol and NADH gets oxidized 
 \end{equation}
 Equation (3) can be substituted in Equation (2) after some rearranging:
 \begin{multline*}
-    \ce{glucose + 2HPO4^{2-} + 2ADP + 2NAD+ \\-> \textcolor{red}{\ce{2CH3CHO}} + \textcolor{red}{\ce{2CO2}} + 2ATP + 2NADH + 2H2O}
+    \ce{glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ \\-> \textcolor{red}{\ce{2CH3CHO}} + \textcolor{red}{\ce{2CO2}} + 2ATP + 2NADH + 2H2O}
 \end{multline*}
 Adding \ce{2H+} on both sides and substituting Equation (4)
 \begin{multline*}
-    \ce{glucose + 2HPO4^{2-} + 2ADP + 2NAD+ + \textcolor{blue}{\ce{2H+}} \\-> \textcolor{blue}{\ce{2C2H5OH}} + \textcolor{blue}{\ce{2NAD+}} + 2ATP + 2H2O}
+    \ce{glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ + \textcolor{blue}{\ce{2H+}} \\-> \textcolor{blue}{\ce{2C2H5OH}} + \textcolor{blue}{\ce{2NAD+}} + 2ATP + 2H2O}
 \end{multline*}
 Cancelling \ce{2NAD+} on both sides gives:
 \begin{equation}
-    \ce{C6H12O6 + 2HPO4^{2-} + 2ADP + 2H+ -> 2C2H5OH + 2CO2 + 2ATP + 2H2O}
+    \ce{C6H12O6 + 2HPO_{4}^{2-} + 2ADP + 2H+ -> 2C2H5OH + 2CO2 + 2ATP + 2H2O}
 \end{equation}
 Which is more familiarly known as:
 \begin{equation}
-    \ce{C6H12O6 -> 2C2H5OH + 2CO2}
+    \ce{C6H12O6 ->[yeast] 2C2H5OH + 2CO2}
 \end{equation}
 
 \section{Kinetics}  % TODO fermentation process changen to alcoholic fermentation
+
+\subsection{Basic Kinetics}
 Given the following chemical reaction denoting alcoholic fermentation:
 \begin{equation}
     \ce{A -> 2B + 2C}
@@ -148,20 +150,18 @@ Studying the kinetics of this reaction is useful for performing further levels o
 
 The rate of reaction, also known as the reaction velocity $V$ with respect to a compound within the chemical equation is represented as the change in concentration of that compound over the change in time multiplied by the inverse of its stoichiometric coefficient:
 \begin{equation}
-    V = -\frac{d[A]}{dt} = \frac{1}{2}\frac{d[B]}{dt} = \frac{1}{2}\frac{d[C]}{dt}
+    V = \text{rate} = -\frac{d[A]}{dt} = \frac{1}{2}\frac{d[B]}{dt} = \frac{1}{2}\frac{d[C]}{dt}
 \end{equation}
 
 Additionally, the rate law states how the reaction velocity will be proportional to the product of reactants, each reactant raised to a power:
 \begin{equation}
-    V = \text{rate} = k[A]^m
+    V = k[A]^m
 \end{equation}
 where k is is the proportionality constant \parencite{ref} and the sum of the powers denote the order of the reaction. In the case of alcoholic fermentation, the order is purely dependent on $m$.
 
 \medskip
 
-If the order of the reaction is 0, or $m=0$, the rate of reaction will not be dependent on the concentration of the reactants. That is $V = k[A]^0 = k$. If the order of the reaction is 1, the rate of reaction will be proportional to the concentration of the. That is $V = k[A]^1 = k[A]$.
-
-\subsection{Basic Kinetics}
+If the order of the reaction is 0, the rate of reaction will not be dependent on the concentration of the reactants, that is $V = k[A]^0 = k$. If the order of the reaction is 1, the rate of reaction will be proportional to the concentration of the reactants, that is $V = k[A]^1 = k[A]$.
 
 \subsection{Michaelis Menten Enzyme Kinetics}
 
