new section templates

--- a/ia.tex
+++ b/ia.tex
@@ -165,10 +165,43 @@ If the order of the reaction is 0, the rate of reaction will not be dependent on
 
 \subsection{Michaelis Menten Enzyme Kinetics}
 
+\section{Design}
+
+\subsection{Safety}
+
+\subsection{Hypothesis}
+
+\subsection{Variables}
+
+\subsection{Apparatus and Experimental Setup}
+
+\section{Data Collection and Processing}
+
+\section{Analysis}
+
+\section{Evaluation}
+
+\section{Conclusion}
+
 \nocite{*}
 
 \newpage
 
 \printbibliography
+
+\newpage
+
+% TODO figure out why "appendices" are not preferred
+\section{Appendices}
+
+\subsection{Appendix A}
+
+\subsection{Appendix B}
+
+\subsection{Appendix C}
+
+\subsection{Appendix D}
+
+\subsection{Appendix E}
 
 \end{document}
