--- a/ia.tex
+++ b/ia.tex
@@ -188,22 +188,23 @@ Before starting the lab, physical, environmental, and ethical safety issues must
     \hline
     \rowcolor[HTML]{CCCCCC} Hazard & Safety Considerations \\
     \hline
-    Risk of broken glassware & consid\\
+    Risk of broken glassware & If possible, glassware should be handled with both hands to minimize the chance of breakage. Extra care should be taken during the cleaning process as glassware may be slippery when wet.\\
     \hline
-    Risk of hotplate burns & consid\\
+    Risk of hotplate burns & It is important to not touch the hotplate, even when it's off. Once finished using, the hotplate and any lab apparatus that was on it should be cooled before storage.\\
     \hline
-    Wires plugged into electrical outlets & consid\\
+    Wiring and electronics & Baggy clothing should not be worn due to the risk of accidentally tangling with wires. If not used in an experiment, chemicals should be kept a far distance from electronics.\\
     \hline
-    Dumping yeast down the drain & consid\\
+    Dumping products down the drain & Yeast should not be dumped down the drain unless it is dissolved and heavily diluted. Similarly, dumping concentrated ethanol is hazardous unless heavily diluted as well. \parencite{ref}\\
     \hline
-    Wasting yeast & consid\\
+    Wasting yeast & Yeast is used in baking and wasting it can be an ethical concern. Any unused yeast that hasn't been contaminated with a scoopula should be returned.\\
     \hline
-    Spills and splashes & consid\\
+    Spills and splashes & Goggles should be worn until the lab has been cleared up to prevent chemicals from coming in contact with the eyes. Paper towels should be kept handy at all times to clean up spills.\\
     \hline
 \end{tabularx}
 \end{table}
 
 \subsection{Hypothesis}
+After the yeast is fully activated and dissolved and mixed with glucose, the concentration of carbon dioxide produced will increase linearly for a short time until tapering off as all of the glucose gets used when the reaction goes to completion. For lower concentrations of glucose, the initial reaction velocity and the final concentration of carbon dioxide gas produced will be smaller than higher concentrations of glucose. When plotting the initial reaction velocity against the concentration of glucose, the curve of best-fit will fit the Michaelis-Menten kinetics model, passing through the origin.
 
 \subsection{Variables}
 
