--- a/ia.tex
+++ b/ia.tex
@@ -240,9 +240,59 @@ The following table lists out all dependent, independent, and control variables 
     \hline
 \end{tabularx}
 \end{table}
-this is what text looks like if it is placed after the table
 
 \subsection{Apparatus and Experimental Setup}
+The following materials were used in my experiment:
+\begin{table}[H]
+\centering
+\caption{Categorized materials list}
+\label{table:3}
+\begin{tabularx}{\textwidth} {
+    | >{\hsize=.35\hsize \linewidth=\hsize \raggedright\arraybackslash}X
+    | >{\hsize=.65\hsize \linewidth=\hsize \raggedright\arraybackslash}X |}
+    \hline
+    \rowcolor[HTML]{CCCCCC} Category & Materials \\
+    Compounds and reactants & \textbullet Red Star active dry yeast \\
+    & \textbullet Lab grade glucose \\
+    & \textbullet Deionized water \\
+    \hline
+    Containers and tools & \textbullet 1\,\si{L} beaker \\
+    & \textbullet 100\,\si{ml} graduated cylinder $(\pm0.5\,\si{cm})$ \\  % TODO turn brackets into $()$
+    & \textbullet 250\,\si{ml} Nalgene bottle \\
+    & \textbullet Magnetic stir bar \\
+    & \textbullet Folded paper for holding reactants \\
+    & \textbullet Scoopula \\
+    \hline
+    Devices & \textbullet Barnstead/Thermolyne magnetic stirring hotplate \\
+    & \textbullet Vernier LabQuest2 \\
+    & \textbullet Vernier stainless steel temperature probe \\
+    & \textbullet A\&D EJ-200 scale $(\pm0.005\,\si{cm})$ \\
+    \hline
+\end{tabularx}
+\end{table}
+
+The experiment was carried out following the procedure below:
+\begin{enumerate}
+    \setlength\itemsep{-5pt}
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem impsum
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+    \item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tristique urna, sodales sollicitudin quam molestie nec. Nunc vel faucibus tellus
+\end{enumerate}
 
 \section{Data Collection and Processing}
 
